# river-segmentation

./: .dockerignore  .gitignore  Dockerfile  README.md  README_PYPI.md  batch_predict.py  dataset.py  docker-compose.yml  grafana-queries.md  model.py  predict_image.py  predict_single_image.py  prediction.py  prediction_v2.py  pyproject.toml  requirements.txt  setup.py  streaming.py  test_encoders.py  train.py  utils.py
app/: main.py
app/backend/: Dockerfile  main.py  requirements.txt  response_models.py  setup.py
app/frontend/: Dockerfile  main.py
config/: kafka_server_jaas.conf
connectors/: __init__.py  kafka_connector.py  kafka_producer_connector.py  minio_connector.py  timescale_connector.py
environment_schema_variables/: backend.env  frontend.env  kafka-broker1.env  kafka-broker2.env  kafka-broker3.env  kafka-controller1.env  kafka-controller2.env  kafka-controller3.env  kafka-ui.env  minio.env  river-segmentation.env  timescaledb.env
kafka/: admin_kafka.py  consumer.py  message_production.py  minio_sink.py  producer.py  server_funcs.py
minio/: upload_image.py
model_train/: batch_predict.py  dataset.py  model.py  predict_image.py  predict_single_image.py  river-segmentation.ipynb  test_encoders.py  train.py  utils.py
models/: model.py
river_segmentation/: __init__.py
river_segmentation/connectors/: __init__.py  base.py  kafka_connector.py  kafka_producer_connector.py  minio_connector.py  timescale_connector.py
river_segmentation/models/: __init__.py  model.py
timescaleDB/: getting_started.py  river-seg.py  river_alchemy.py
(+8 files in other folders)
