[project]
name = "river-segmentation"
version = "0.1.0"
description = "An all in one app for river segmentation. Consists of the model, the frontend and backend, the databases and the docker containers"
authors = [
    {name = "deepblue597",email = "iasonas2001@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "quixstreams (>=3.21.0,<4.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "streamlit (>=1.47.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
mypy = "^1.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
